Add Trigger test class

--- a/force-app/main/default/classes/GetFutureInterviewsRestResource.cls
+++ b/force-app/main/default/classes/GetFutureInterviewsRestResource.cls
@@ -6,6 +6,10 @@ global with sharing class GetFutureInterviewsRestResource {
         List<Interview__c> interviews;
         try {
             interviews = SRV_InterviewService.getFutureInterviews();
+
+            if(interviews==null || interviews.isEmpty())
+                throw new InterviewNotFoundException('No comming interviews');
+
         } catch (Exception ex) {
             System.debug(ex.getMessage());
         }
